# voltrayke

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  Config.cmake  README.md
.github/workflows/: build.yml
resources/: about.html  resources.qrc
resources/freedesktop/: application.desktop.in  description
resources/linux/: org.azdrums.voltrayke.appdata.xml  org.azdrums.voltrayke.desktop  qvolume.appdata.xml  qvolume.desktop
resources/translations/: QVolume_it_IT.ts  voltrayke.desktop.yaml  voltrayke.ts  voltrayke_it.desktop.yaml  voltrayke_it.ts  voltrayke_it_IT.ts  voltrayke_ko.ts  voltrayke_nl.desktop.yaml  voltrayke_nl.ts  voltrayke_nl_NL.ts
src/: application.cpp  application.hpp  dialogabout.cpp  dialogprefs.cpp  dialogprefs.hpp  dialogprefs.ui  main.cpp  menuvolume.cpp  menuvolume.hpp  qtilities.hpp  settings.cpp  settings.hpp  voltrayke.cpp  voltrayke.hpp
src/audio/: device.cpp  device.hpp  engine.cpp  engine.hpp  engineid.hpp
src/audio/device/: alsa.cpp  alsa.hpp
src/audio/engine/: alsa.cpp  alsa.hpp  pulseaudio.cpp  pulseaudio.hpp
src/ui/: dialogabout.cpp  dialogabout.hpp  dialogabout.ui  dialogprefs.cpp  dialogprefs.hpp  dialogprefs.ui  menuactions.cpp  menuactions.hpp  menuvolume.cpp  menuvolume.hpp  menuvolume.ui  prefsdialog.cpp  prefsdialog.hpp  prefsdialog.ui  utils.cpp  utils.hpp  volumewidget.cpp  volumewidget.hpp  volumewidget.ui
